--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "nodemon server.js",
     "unit-tests": "jest test/unit.test.js",
     "integration-tests": "jest --maxWorkers=1 test/integration.test.js",
-    "jest": "npm run jest"
+    "jest-test": "jest"
   },
   "keywords": [],
   "author": "",
