--- a/.github/workflows/optimizetest.yaml
+++ b/.github/workflows/optimizetest.yaml
@@ -12,7 +12,6 @@ jobs:
         with:
           node-version: '12'
       - run: npm install
-      - run: npm start
       
       - name: Thundra Foresight JS Instrumentation
         uses: thundra-io/thundra-foresight-js-action@v1
@@ -24,4 +23,4 @@ jobs:
           # Default is "npm test" 
           # Modify accoding to you test script.
           # ex: yarn run test:integration || npm run test:e2e
-          command: npm run jest-test
+          command: npm start & ; npm run jest-test
