Update test command

--- a/.github/workflows/optimizetest.yaml
+++ b/.github/workflows/optimizetest.yaml
@@ -12,6 +12,7 @@ jobs:
         with:
           node-version: '12'
       - run: npm install
+      - run: npm start &
       
       - name: Thundra Foresight JS Instrumentation
         uses: thundra-io/thundra-foresight-js-action@v1
@@ -23,4 +24,4 @@ jobs:
           # Default is "npm test" 
           # Modify accoding to you test script.
           # ex: yarn run test:integration || npm run test:e2e
-          command: npm start & ; npm run jest-test
+          command: npm jest-test
