--- a/.github/workflows/optimizetest.yaml
+++ b/.github/workflows/optimizetest.yaml
@@ -24,4 +24,4 @@ jobs:
           # Default is "npm test" 
           # Modify accoding to you test script.
           # ex: yarn run test:integration || npm run test:e2e
-          command: npm jest-test
+          command: npm run jest-test
