Update jest test command in workflow

--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -17,7 +17,7 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm start &
-      - run: npx jest
+      - run: npm run jest-test
       - name: Foresight test kit
         if: success() || failure()
         uses: runforesight/foresight-test-kit-action@v1
