--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "nodemon server.js",
     "unit-tests": "jest test/unit.test.js",
     "integration-tests": "jest --maxWorkers=1 test/integration.*.test.js",
-    "jest-test": "jest --config ./jest.config.json --collectCoverage --coverageDirectory=./coverage tests/user_management/",
+    "jest-test": "jest --config ./jest.config.json --collectCoverage --coverageDirectory=./coverage",
     "only-impacted-test":"jest --changedSince=origin/main --coverage"
   },
   "keywords": [],
