Update change impact

--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -17,6 +17,7 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm start &
+      - run: npm run jest-test
       - run: npx jest --config ./jest.config.json --collectCoverage --coverageDirectory="./coverage"
       - name: Foresight test kit
         if: success() || failure()
