--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -28,4 +28,4 @@ jobs:
           test_framework: JEST
           test_path: junit.xml
           coverage_format: COBERTURA/XML
-          coverage_path: ./coverage/cobertura-coverage.xml
+          coverage_path: ./coverage
