--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -17,7 +17,6 @@ jobs:
           node-version: '16.x'
       - run: npm ci
       - run: npm start &
-      - run: npm run jest-test
       - run: npx jest --config ./jest.config.json --collectCoverage --coverageDirectory="./coverage"
       - name: Foresight test kit
         if: success() || failure()
@@ -28,4 +27,4 @@ jobs:
           test_framework: JEST
           test_path: junit.xml
           coverage_format: COBERTURA/XML
-          coverage_path: ./coverage
+          coverage_path: ./coverage/cobertura-coverage.xml
