--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: npm ci
       - run: npm start &
       - run: npx jest --config ./jest.config.json --collectCoverage --coverageDirectory="./coverage"
+      - run: ls
       - name: Foresight test kit
         if: success() || failure()
         uses: runforesight/foresight-test-kit-action@v1
