--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "unit-tests": "jest test/unit.test.js",
     "integration-tests": "jest --maxWorkers=1 test/integration.*.test.js",
     "jest-test": "jest --config ./jest.config.json --collectCoverage --coverageDirectory=./coverage",
-    "only-impacted-test":"jest --changedSince=origin/main --coverage"
+    "only-impacted-test":"jest --changedSince=origin/main --coverage --config ./jest.config.json --collectCoverage --coverageDirectory=./coverage"
   },
   "keywords": [],
   "author": "",
