--- a/.github/workflows/only_impacted_test.yaml
+++ b/.github/workflows/only_impacted_test.yaml
@@ -14,9 +14,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
+      - run: |
+        git fetch --no-tags --depth=1 origin master
+        git checkout -b master
+        git checkout ${{ github.event.pull_request.head.sha }}
       - run: npm ci
       - run: npm start &
-      - run: npx jest --changedSince=origin/main --coverage --config ./jest.config.json --collectCoverage --coverageDirectory="./coverage"
+      - run: npx jest --changedSince=main --coverage --config ./jest.config.json --collectCoverage --coverageDirectory="./coverage"
       - name: Foresight test kit
         if: success() || failure()
         uses: runforesight/foresight-test-kit-action@v1
