--- a/.github/workflows/only_impacted_test.yaml
+++ b/.github/workflows/only_impacted_test.yaml
@@ -11,8 +11,8 @@ jobs:
           api_key: b983b8fb-e108-483a-bcd7-fdabdb16944a
       - uses: actions/checkout@v3
       - run: |
-          git fetch --no-tags --depth=1 origin master
-          git checkout -b master
+          git fetch --no-tags --depth=1 origin main
+          git checkout -b main
           git checkout ${{ github.event.pull_request.head.sha }}
       - name: Use Node.js
         uses: actions/setup-node@v3
