--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -29,3 +29,8 @@ jobs:
           test_path: junit.xml
           coverage_format: COBERTURA/XML
           coverage_path: ./coverage/cobertura-coverage.xml
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: coverage-report
+          path: ./coverage
